--- a/views/auth/sign-in.ejs
+++ b/views/auth/sign-in.ejs
@@ -5,12 +5,12 @@
 <form class="auth" action="/auth/sign-in" method="POST">
   <h1>Sign in</h1>
   <label for="username"></label>
-  <input class="signuphover" type="text" name="username" id="username" placeholder="Username" />
+  <input class="signup-hover" type="text" name="username" id="username" placeholder="Username" />
   <br>
   <label for="password"></label>
-  <input class="signuphover" type="password" name="password" id="password" placeholder="Password" />
+  <input class="signup-hover" type="password" name="password" id="password" placeholder="Password" />
   <br>
-  <button class="btnsignin" type="submit">Sign in</button>
+  <button class="btn-signin" type="submit">Sign in</button>
 </form>
 </section>
 <%- include('../partials/footer') %>
