--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,6 +1,6 @@
 </head>
 <body>
-  <nav class="navbar">
+  <nav class="nav-bar">
     <% if (user) { %>
       <a href="/users/<%= user._id %>">My Profile</a>
       <a href="/songs">Songs</a>
