--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -95,11 +95,11 @@
   background-position: center;
 }
 
-.asongs {
+.a-songs {
   color: black;
 }
 
-.asongs:hover {
+.a-songs:hover {
   text-decoration: underline;
   font-weight: bold;
   color: whitesmoke;
