--- a/views/auth/sign-up.ejs
+++ b/views/auth/sign-up.ejs
@@ -8,12 +8,12 @@
   <input class="signuphover" type="text" maxlength="12" name="username" id="username" placeholder="Username"/>
   <br>
   <label for="password"></label>
-  <input class="signuphover" type="password" name="password" id="password" placeholder="Password" />
+  <input class="signup-hover" type="password" name="password" id="password" placeholder="Password" />
   <br>
   <label for="confirmPassword"></label>
-  <input class="signuphover" type="password" name="confirmPassword" id="confirmpassword" placeholder="Confirm Password"/>
+  <input class="signup-hover" type="password" name="confirmPassword" id="confirmpassword" placeholder="Confirm Password"/>
   <br>
-  <button class="btnsignup" type="submit">Sign up</button>
+  <button class="btn-signup" type="submit">Sign up</button>
 </form>
 </section>
 
