--- a/views/auth/sign-in.ejs
+++ b/views/auth/sign-in.ejs
@@ -3,7 +3,7 @@
 
 <section class="signin">
 <form class="auth" action="/auth/sign-in" method="POST">
-  <h1>Sign in</h1>
+  <h1 class="h1-title">Sign in</h1>
   <label for="username"></label>
   <input class="signup-hover" type="text" name="username" id="username" placeholder="Username" />
   <br>
