--- a/views/auth/sign-up.ejs
+++ b/views/auth/sign-up.ejs
@@ -3,7 +3,7 @@
 
 <section class="signup">
 <form class="auth" action="/auth/sign-up" method="POST">
-  <h1>Create a new account!</h1>
+  <h1 class="h1-title">Create a new account!</h1>
   <label for="username"></label>
   <input class="signuphover" type="text" maxlength="12" name="username" id="username" placeholder="Username"/>
   <br>
